--- a/style/main.css
+++ b/style/main.css
@@ -1,48 +1,14 @@
 html, body {
     box-sizing: border-box;
 }
+html * {
+    font-family: 'Monospace', Courier;
+}
 body {
     margin: 0px;
     border: none;
 }
-html * {
-    font-family: 'nouveau_ibm';
-    font-weight: normal;
-    font-style: normal;
-}
-
 a {
     text-decoration: none;
     color: #a54;
-}
-i {
-    margin: 3px;
-}
-button, .upload-btn {
-    border: 1px solid black;
-    background-color: #fff;
-    margin: 1px;
-    padding: 2px;
-}
-
-.title {
-    font-family: 'Retroscape';
-    font-weight: normal;
-    font-style: normal;
-}
-textarea, code {
-    font-family: 'iosevka';
-    color : #fda;
-}
-
-#view pre {
-    background-color: #eef;
-    color: #634;
-    max-width: 600px;
-    padding: 20px;
-}
-
-
-html {
-    background-color: #1c282a;
 }
